--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -11,48 +11,47 @@
         android:id="@+id/cvSingleUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        cvSingleUser:cardCornerRadius="10dp"
-        android:layout_margin="10dp">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
-        <ImageView
-            android:id="@+id/itemPic"
-            android:layout_width="90dp"
-            android:layout_height="80dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_margin="10dp"
+        cvSingleUser:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/titleTv"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="This is the title"
-                android:textStyle="bold"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="8dp"
-                android:textSize="15sp"
-                />
 
-            <TextView
-                android:id="@+id/linkTv"
+            <ImageView
+                android:id="@+id/itemPic"
+                android:layout_width="90dp"
+                android:layout_height="80dp"
+                app:srcCompat="@mipmap/ic_launcher" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="5dp"
-                android:text="The filed will contain link" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/titleTv"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="10dp"
+                    android:text="This is the title"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/linkTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="5dp"
+                    android:text="The filed will contain link" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
