--- a/app/src/main/res/layout-mdpi/activity_details.xml
+++ b/app/src/main/res/layout-mdpi/activity_details.xml
@@ -14,21 +14,22 @@
         android:id="@+id/titleTv"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
         android:inputType="textPersonName"
         android:text="Name"
-        android:textSize="18sp"
+        android:textSize="22sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/pubDateTv"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="8dp"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="Name"
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -71,6 +72,5 @@
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
         ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
-
 
 </LinearLayout>
